# trust

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CI.md  CLAUDE.md  Cargo.toml  ENHANCED_QUALITY_IMPLEMENTATION.md  LEVELS.md  LICENSE  PRODUCTION_READINESS_ROADMAP.md  README.md  cargo.toml  clippy.toml  deny.toml  github-actions-review.md  install.sh  makefile  test.md  test.txt  test_phase2_validation.rs
alpaca-broker/: Cargo.toml
alpaca-broker/src/: asset_lookup.rs  cancel_trade.rs  close_trade.rs  executions.rs  fees.rs  keys.rs  lib.rs  market_data.rs  modify_stop.rs  modify_target.rs  modify_trade.rs  order_mapper.rs  submit_trade.rs  sync_trade.rs  watch_trade.rs
broker-sync/: Cargo.toml
broker-sync/src/: daemon.rs  ipc.rs  lib.rs  messages.rs  mock_alpaca.rs  state.rs  websocket_sync.rs
broker-sync/tests/: actor_session_test.rs  integration_test.rs  jitter_test.rs  message_types_test.rs  module_structure_test.rs  state_machine_property_test.proptest-regressions  state_machine_property_test.rs  state_machine_test.rs  websocket_integration_test.rs
cli/: Cargo.toml
cli/src/: command_routing.rs  commands.rs  dialogs.rs  dispatcher.rs  exporters.rs  main.rs  output.rs  protected_keyword.rs  trading_vehicle_import.rs  views.rs
cli/src/commands/: account_command.rs  advisor_command.rs  daemon_command.rs  db_command.rs  distribution_command.rs  grade_command.rs  key_command.rs  level_command.rs  market_data_command.rs  metrics_command.rs  onboarding_command.rs  policy_command.rs  report_command.rs  rule_command.rs  trade_command.rs  trading_vehicle_command.rs  transaction_command.rs
cli/src/dialogs/: account_dialog.rs  dialog_helpers.rs  io.rs  keys_dialog.rs  modify_dialog.rs  modify_stop_dialog.rs  rule_dialog.rs  trade_cancel_dialog.rs  trade_close_dialog.rs  trade_create_dialog.rs  trade_exit_dialog.rs  trade_fill_dialog.rs  trade_funding_dialog.rs  trade_search_dialog.rs  trade_submit_dialog.rs  trade_sync_dialog.rs  trade_watch_dialog.rs  trading_vehicle_dialog.rs  transaction_dialog.rs
cli/src/views/: account_view.rs  advanced_metrics_view.rs  concentration_view.rs  drawdown_view.rs  execution_view.rs  level_view.rs  log_view.rs  order_view.rs  performance_view.rs  risk_view.rs  rule_view.rs  trade_view.rs  trading_vehicle_view.rs  transaction_view.rs
cli/tests/: daemon_commands_test.rs  integration_test.rs  integration_test_account.rs  integration_test_broker_failures.rs  integration_test_bug_hunt.rs  integration_test_bug_regressions.rs  integration_test_cancel_trade.rs  integration_test_concentration_report.rs  integration_test_dispatch_matrix.rs  integration_test_dispatcher_commands.rs  integration_test_drawdown_report.rs  integration_test_grade.rs  integration_test_level.rs  integration_test_level_cli.rs  integration_test_level_stress.rs  integration_test_market_data_cli.rs  integration_test_performance_report.rs  integration_test_policy_cli.rs  integration_test_report_json_contract.rs  integration_test_report_json_snapshots.rs  integration_test_risk_guards.rs  integration_test_summary_report.rs  integration_test_sync_edge_cases.rs  integration_test_trade.rs  integration_test_trading_vehicle_alpaca.rs  integration_test_transactions.rs  integration_test_use_cases.rs  integration_test_watch_cli.rs
cli/tests/snapshots/: report_concentration.json  report_concentration_open_only.json  report_drawdown.json  report_metrics.json  report_performance.json  report_risk.json  report_summary.json
core/: Cargo.toml
core/src/: broker_registry.rs  calculators_advanced_metrics.rs  calculators_concentration.rs  calculators_drawdown.rs  calculators_grading.rs  calculators_performance.rs  calculators_risk.rs  calculators_trade.rs  commands.rs  events.rs  integration_tests.rs  lib.rs  main.rs  mocks.rs  services.rs  validators.rs  workers.rs
core/src/account_calculators/: capital_available.rs  capital_balance.rs  capital_beginning_of_month.rs  capital_in_trades.rs  capital_taxable.rs
core/src/calculators_account/: capital_available.rs  capital_balance.rs  capital_beginning_of_month.rs  capital_in_trades.rs  capital_taxable.rs
core/src/calculators_trade/: capital_funded.rs  capital_in_market.rs  capital_not_at_risk.rs  capital_out_of_market.rs  capital_required.rs  capital_taxable.rs  hypothesis.rs  performance.rs  quantity.rs  risk.rs
core/src/commands/: balance.rs  level.rs  order.rs  overview.rs  rule.rs  trade.rs  trade_watch.rs  transaction.rs
core/src/events/: trade.rs
core/src/services/: advisory.rs  event_distribution_service.rs  fund_transfer_service.rs  (+5 more)
core/tests/: trade_watch_integration_test.rs
db-sqlite/: Cargo.toml  build.rs  diesel.toml
db-sqlite/src/: backup.rs  database.rs  error.rs  lib.rs  migration_fk_safety_tests.rs  schema.rs  workers.rs
db-sqlite/tests/: test_account_hierarchy_migration.rs  test_distribution_atomicity.rs
ibkr-broker/: Cargo.toml
ibkr-broker/src/: client.rs  config.rs  contracts.rs  executions.rs  lib.rs  market_data.rs  orders.rs  parsing.rs  support.rs
ibkr-broker/tests/: http_integration.rs
model/: Cargo.toml
model/src/: account.rs  broker.rs  broker_event.rs  broker_kind.rs  currency.rs  database.rs  distribution.rs  execution.rs  fee_activity.rs  grade.rs  level.rs  lib.rs  market_data.rs  order.rs  rule.rs  strategy.rs  trade.rs  trade_grade.rs  trading_vehicle.rs  transaction.rs
trust-broker/: Cargo.toml
trust-broker/src/: close_trade.rs  keys.rs  lib.rs  order_mapper.rs  submit_trade.rs  sync.rs  sync_trade.rs
trust-cli/: Cargo.toml
trust-cli/src/: command.rs  commands.rs  dialog.rs  dialogs.rs  dispatcher.rs  main.rs  view.rs  views.rs
trust-cli/tests/: integration_test.rs  integration_test_account.rs  integration_test_cancel_trade.rs  integration_test_trade.rs
trust-db-sqlite/: .env  Cargo.toml
trust-db-sqlite/src/: database.rs  lib.rs  schema.rs  worker_account.rs  workers.rs
trust-model/: Cargo.toml
trust-model/src/: account.rs  broker.rs  currency.rs  database.rs  lib.rs  order.rs  price.rs  rule.rs  strategy.rs  target.rs  trade.rs  trading_vehicle.rs  transaction.rs
(+162 files in other folders)
