[workspace]
members = ["model", "db-sqlite", "core", "cli", "alpaca-broker"]

[workspace.package]
name = "trust"
version = "0.3.0"
authors = ["Matias Villaverde <matiasvillaverde@protonmail.com>"]
rust-version = "1.68.2"
license = "MIT"
repository = "https://github.com/integer256/trust"
readme = "README.md"

[workspace.dependencies]
chrono = "0.4.41"
diesel = { version = "2.2.10", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono"] }
diesel_migrations = "2.2.0"
diesel-derive-enum = { version = "2.0.1", features = ["sqlite"] }
uuid = { version = "1.17.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
clap = { version = "4.5.39", features = ["derive"] }
tabled = { version = "0.19.0" }
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
rust_decimal = "1.37.1"
rust_decimal_macros = "1.37.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
apca = "0.30.0"
num-decimal = {version = "0.2.4", default-features = false, features = ["num-v04", "serde"]}
tokio = {version = "1.45.1", default-features = false, features = ["net", "rt-multi-thread", "macros"]}
dotenv = "0.15.0"
shellexpand = "3.1.1"
keyring = "3.6.2"
serde_json = "1.0.140"
