[package]
name = "alpaca-broker"
version = "0.3.0"
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = { path = "../model", version = "0.3.0" }
rust_decimal = {workspace = true}
rust_decimal_macros = {workspace = true}
uuid = {workspace = true}
chrono = {workspace = true}
apca = {workspace = true}
tokio = {workspace = true}
dotenvy = {workspace = true}
keyring = {workspace = true}
serde_json = {workspace = true}
num-decimal = {workspace = true}