[package]
name = "alpaca-broker"
version = "0.3.0"
edition = "2021"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = { package = "trust-model", path = "../model", version = "0.3.0" }
rust_decimal = {workspace = true}
rust_decimal_macros = {workspace = true}
uuid = {workspace = true}
chrono = {workspace = true}
apca = {workspace = true}
tokio = {workspace = true}
keyring = {workspace = true}
serde_json = {workspace = true}
num-decimal = {workspace = true}
futures-util = {workspace = true}
broker-sync = { path = "../broker-sync" }
