[package]
name = "alpaca-broker"
version = { workspace = true }
edition = "2021"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = { package = "trust-model", path = "../model", version = "0.3.2" }
rust_decimal = {workspace = true}
rust_decimal_macros = {workspace = true}
uuid = {workspace = true}
chrono = {workspace = true}
apca = {workspace = true}
tokio = {workspace = true}
futures-util = {workspace = true}
keyring = {workspace = true}
serde_json = {workspace = true}
num-decimal = {workspace = true}
