[package]
name = "broker-sync"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# WebSocket support (for future use)
tokio-tungstenite = "0.21"
futures = "0.3"
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"

# Daemon support
daemonize = "0.5"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# File paths
dirs = "5"

# Internal dependencies
model = { path = "../model" }

# Database support
diesel = { version = "2", features = ["sqlite", "r2d2", "chrono", "uuid"] }
r2d2 = "0.8"

# Decimal support
rust_decimal = { version = "1.35", features = ["serde"] }
rust_decimal_macros = "1.35"

# UUID support
uuid = { version = "1.9", features = ["v4", "serde"] }

# Time support
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"