[package]
name = "broker-sync"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
futures = "0.3"
rust_decimal = { version = "1.35", features = ["serde"] }
rust_decimal_macros = "1.35"
uuid = { version = "1.9", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
url = "2"
rand = "0.8"

# Internal dependencies
model = { path = "../model" }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
proptest = "1"
criterion = "0.5"

