[package]
name = "broker-sync"
version = { workspace = true }
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
rust_decimal = { version = "1.40", features = ["serde"] }
rust_decimal_macros = "1.40"
uuid = { version = "1.20", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"
rand = "0.10"

[dev-dependencies]
proptest = "1"
