[package]
name = "cli"
version = "0.3.0"
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = { path = "../model", version = "0.3.0" }
core = { path = "../core", version = "0.3.0" }
alpaca-broker = { path = "../alpaca-broker", version = "0.3.0" }
db-sqlite = { path = "../db-sqlite", version = "0.3.0" }

clap = {workspace = true}
dialoguer = {workspace = true}
tabled = {workspace = true}
rust_decimal_macros = {workspace = true}
rust_decimal = {workspace = true}
shellexpand = {workspace = true}
uuid = {workspace = true}
chrono = {workspace = true}
serde_json = {workspace = true}
