[package]
name = "trust-cli"
description = "Risk-managed algorithmic trading CLI"
version = { workspace = true }
edition = "2021"
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
readme = "../README.md"
rust-version = { workspace = true }
keywords = ["trading", "risk-management", "algorithmic-trading", "finance", "cli"]
categories = ["command-line-utilities", "finance"]

[[bin]]
name = "trust"
path = "src/main.rs"

[dependencies]
model = { package = "trust-model", path = "../model", version = "0.3.2" }
core = { path = "../core", version = "0.3.2" }
alpaca-broker = { path = "../alpaca-broker", version = "0.3.2" }
db-sqlite = { path = "../db-sqlite", version = "0.3.2" }
broker-sync = { path = "../broker-sync", version = "0.3.2" }

clap = {workspace = true}
dialoguer = {workspace = true}
tabled = {workspace = true}
rust_decimal_macros = {workspace = true}
rust_decimal = {workspace = true}
shellexpand = {workspace = true}
uuid = {workspace = true}
chrono = {workspace = true}
serde_json = {workspace = true}
keyring = {workspace = true}
