[package]
name = "core"
version = "0.3.0"
edition = "2021"
license = "GPL-3.0"

[lib]
name = "core"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = { path = "../model", version = "0.3.0" }
rust_decimal = {workspace = true}
rust_decimal_macros = {workspace = true}
uuid = {workspace = true}
chrono = {workspace = true}
sha2 = {workspace = true}

[dev-dependencies]
db-sqlite = { path = "../db-sqlite", version = "0.3.2" }
