[package]
name = "db-sqlite"
edition = "2021"
description = "A concrete implementation of the Trust database using sqlite"

version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
name = "db_sqlite"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

model = { path = "../model", version = "0.3.0" }


rust_decimal = {workspace = true}
rust_decimal_macros = {workspace = true}
diesel = {workspace = true}
diesel_migrations = {workspace = true}
diesel-derive-enum = {workspace = true}
chrono = {workspace = true}
uuid =  {workspace = true}
tracing =  {workspace = true}
tracing-subscriber =  {workspace = true}