[package]
name = "ibkr-broker"
version = { workspace = true }
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
model = { package = "trust-model", path = "../model", version = "0.3.2" }
chrono = { workspace = true }
rust_decimal = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "cookies", "json", "native-tls"] }
keyring = { workspace = true }

[dev-dependencies]
rust_decimal_macros = { workspace = true }
