[package]
name = "model"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = {workspace = true}
chrono = {workspace = true}
rust_decimal = {workspace = true}
rust_decimal_macros = {workspace = true}
