[package]
name = "trust-model"
version = { workspace = true }
edition = "2021"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = {workspace = true}
chrono = {workspace = true}
rust_decimal = {workspace = true}
rust_decimal_macros = {workspace = true}
