[package]
name = "trust-cli"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trust-model = { path = "../trust-model", version = "0.2.0" }
trust-core = { path = "../trust-core", version = "0.2.0" }
trust-broker = { path = "../trust-broker", version = "0.2.0" }
trust-db-sqlite = { path = "../trust-db-sqlite", version = "0.2.0" }

clap = {workspace = true}
dialoguer = {workspace = true}
tabled = {workspace = true}
rust_decimal_macros = {workspace = true}
rust_decimal = {workspace = true}
shellexpand = {workspace = true}
uuid = {workspace = true}
chrono = {workspace = true}
